tests/agl/rejections/type/inference_unresolved_generic_value.agl
def id[T](x: T) -> T = x
let f = id
f
